app/components/createKeywordAlertDialog/createKeywordAlertDialog.scss
.dialogPaper {
  width: 100%;
  padding: 20px 16px;
  top: -120px;
  margin: 16px;
}

.title {
  font-size: 20px;
  font-weight: 600;
  letter-spacing: -0.25px;
  color: $black0;
  margin: 4px 0 12px 0;
}

.description {
  font-size: 15px;
  color: $gray700;
  line-height: 1.5;
}

.form {
  display: block;
  margin-top: 36px;

  .keywordInput {
    width: 100%;
    height: 44px;
    border-radius: 4px;
    border: solid 1px $gray400;
    font-size: 15px;
    padding: 8px;
    color: $black0;
    margin-top: 8px;

    &.keywordInputError {
      border: 1px solid $red0;
    }
  }

  .detailLabel {
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0.47px;
    color: $gray700;
  }

  .errorIcon {
    top: 6px;

    i {
      display: inline-flex;
      width: 20px;
      height: 20px;
      color: $red0;

      svg {
        width: 20px;
        height: 20px;
      }
    }
  }
}

.btnWrapper {
  display: flex;
  justify-content: flex-end;
  margin-top: 26px;
}

.closeBtnWrapper {
  position: absolute;
  right: 16px;
}

